syntax = "proto3";

import "google/protobuf/timestamp.proto";

package tokener;

option go_package="tokener/internal/tokener;tokener";

service Tokener {
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message CreateTokenRequest {
  string user_id = 1;
}

message CreateTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}
